--- a/views/users.html
+++ b/views/users.html
@@ -19,6 +19,10 @@
 <body>
  
   <zing-grid src="http://reporting.jinhaoliu.com/api" caption="CRUD Endpoint" editor-controls="all" pager="" page-size="5" layout="row" role="grid" editor="inline" viewport="tablet-portrait">
+    <zg-data>
+        <zg-param name="createOptions" value='{"requestType": "application/x-www-form-urlencoded"}'></zg-param>
+        <zg-param name="idKey" value="_id"></zg-param>
+    </zg-data>
     <zg-param name="createOptions" value='{"requestType": "application/x-www-form-urlencoded"}'></zg-param>
     <zg-param name="idKey" value="_id"></zg-param>
   </zing-grid>
