--- a/views/users.html
+++ b/views/users.html
@@ -22,6 +22,8 @@
     <zg-data>
         <zg-param name="createOptions" value='{"requestType": "application/x-www-form-urlencoded"}'></zg-param>
         <zg-param name="updateOptions" value='{"requestType": "application/x-www-form-urlencoded"}'></zg-param>
+        <zg-param name="updateRowOptions" value='{"requestType": "application/x-www-form-urlencoded"}'></zg-param>
+        <zg-param name="updateCellOptions" value='{"requestType": "application/x-www-form-urlencoded"}'></zg-param>
         <zg-param name="idKey" value="_id"></zg-param>
     </zg-data>
   </zing-grid>
