--- a/views/users.html
+++ b/views/users.html
@@ -21,9 +21,9 @@
   <zing-grid src="http://reporting.jinhaoliu.com/api" caption="CRUD Endpoint" editor-controls="all" pager="" page-size="5" layout="row" role="grid" editor="inline" viewport="tablet-portrait">
     <zg-data>
         <zg-param name="createOptions" value='{"requestType": "application/x-www-form-urlencoded"}'></zg-param>
-        <zg-param name="updateOptions" value='{"requestType": "application/x-www-form-urlencoded"}'></zg-param>
-        <zg-param name="updateRowOptions" value='{"requestType": "application/x-www-form-urlencoded"}'></zg-param>
-        <zg-param name="updateCellOptions" value='{"requestType": "application/x-www-form-urlencoded"}'></zg-param>
+        <zg-param name="updateOptions" value='{"method":"PATCH", ""requestType": "application/x-www-form-urlencoded"}'></zg-param>
+        <zg-param name="updateRowOptions" value='{"method":"PATCH", ""requestType": "application/x-www-form-urlencoded"}'></zg-param>
+        <zg-param name="updateCellOptions" value='{"method":"PATCH", ""requestType": "application/x-www-form-urlencoded"}'></zg-param>
         <zg-param name="idKey" value="_id"></zg-param>
     </zg-data>
   </zing-grid>
