try email login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
 <% } %>
 <form action="/login" method="POST">
   <div>
-    <label for="username">Username</label>
+    <label for="username">Username/Email</label>
     <input type="username" id="username" name="username" required>
   </div>
   <div>
@@ -13,4 +13,3 @@
   </div>
   <button type="submit">Login</button>
 </form>
-<a href="/register">Register</a>
