--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,6 +60,80 @@
       console.log(result);
       resolve(result);
     });
+
+    promNav.then((result) => {
+      const today = new Date().getTime();
+      let countArray = [0, 0, 0, 0, 0, 0, 0]
+      result.forEach((entry) => {
+        if (entry.timestamp) {
+          if (today - entry.timestamp < 86400000 * 7) {
+            if (today - entry.timestamp < 86400000) {
+              countArray[0]++;
+            } else if (today - entry.timestamp < 86400000 * 2) {
+              countArray[1]++;
+            } else if (today - entry.timestamp < 86400000 * 3) {
+              countArray[2]++;
+            } else if (today - entry.timestamp < 86400000 * 4) {
+              countArray[3]++;
+            } else if (today - entry.timestamp < 86400000 * 5) {
+              countArray[4]++;
+            } else if (today - entry.timestamp < 86400000 * 6) {
+              countArray[5]++;
+            } else {
+              countArray[6]++;
+            }
+          }
+        }
+      });
+      myConfig = {
+        "graphset": [{
+          "type": "bar",
+          "title": {
+            "text": "Number of Clicks by Day"
+          },
+          "plot": {
+            "value-box": {
+              "text": "%v"
+            },
+            "tooltip": {
+              "text": "%v"
+            }
+          },
+          "legend": {
+            "toggle-action": "hide",
+            "header": {
+              "text": "Legend Header"
+            },
+            "item": {
+              "cursor": "pointer"
+            },
+            "draggable": true,
+            "drag-handler": "icon"
+          },
+          "scale-x": {
+            "values": [
+              "Last 24hrs",
+              "1 day ago",
+              "2 days ago",
+              "3 days ago",
+              "4 days ago",
+              "5 days ago",
+              "6 days ago"
+            ]
+          },
+          "series": [
+            {
+              "values": countArray,
+              "text": "Num Visits"
+            }
+          ]
+        }]
+      };
+      zingchart.render({
+        id: 'myBarChart',
+        data: myConfig
+      });
+    });
     const promCLS = new Promise(async (resolve, reject) => {
       const url = 'http://jinhaoliu.com/api/cls';
       let res = await fetch(url);
@@ -276,10 +350,10 @@
           ]
         }]
       }
-      zingchart.render({
-        id: 'myBarChart',
-        data: myConfig
-      });
+      // zingchart.render({
+      //   id: 'myBarChart',
+      //   data: myConfig
+      // });
     });
 
     const promMobile = new Promise(async (resolve, reject) => {
